Update website for v2025.10.1

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
+    <title>Overview: module code &#8212; Thetis 2025.10.1+1.gf513865b.dirty documentation</title>
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../_static/thetis.css?v=0f3339d6" />
-    <script src="../_static/documentation_options.js?v=ccd1159c"></script>
+    <script src="../_static/documentation_options.js?v=df6f0c20"></script>
     <script src="../_static/doctools.js?v=9bcbadda"></script>
     <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../genindex.html" />
@@ -80,6 +80,7 @@
 <li><a href="thetis/timezone.html">thetis.timezone</a></li>
 <li><a href="thetis/tracer_eq.html">thetis.tracer_eq</a></li>
 <li><a href="thetis/tracer_eq_2d.html">thetis.tracer_eq_2d</a></li>
+<li><a href="thetis/turbine_loader.html">thetis.turbine_loader</a></li>
 <li><a href="thetis/turbines.html">thetis.turbines</a></li>
 <li><a href="thetis/turbulence.html">thetis.turbulence</a></li>
 <li><a href="thetis/utility.html">thetis.utility</a></li>
