--- a/_modules/thetis/exporter.html
+++ b/_modules/thetis/exporter.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.exporter &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
+    <title>thetis.exporter &#8212; Thetis 2025.10.1 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=ccd1159c"></script>
+    <script src="../../_static/documentation_options.js?v=1f79160d"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
@@ -87,8 +87,6 @@
                                     <span class="n">tensor</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">visu_fs</span> <span class="o">=</span> <span class="n">get_functionspace</span><span class="p">(</span><span class="n">mesh</span><span class="p">,</span> <span class="n">family</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="n">family</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
-    <span class="c1"># make sure that you always get the same temp work function</span>
-    <span class="n">visu_fs</span><span class="o">.</span><span class="n">max_work_functions</span> <span class="o">=</span> <span class="mi">1</span>
     <span class="k">return</span> <span class="n">visu_fs</span></div>
 
 
@@ -177,28 +175,21 @@
     <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.VTKExporter.export&quot;</span><span class="p">)</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">export</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Exports given function to disk&quot;&quot;&quot;</span>
-        <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">fs_visu</span><span class="o">.</span><span class="n">max_work_functions</span> <span class="o">==</span> <span class="mi">1</span>
-        <span class="n">tmp_proj_func</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">fs_visu</span><span class="o">.</span><span class="n">get_work_function</span><span class="p">()</span>
-        <span class="c1"># NOTE tmp function must be invariant as the projector is built only once</span>
         <span class="n">op</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cast_operators</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">function</span><span class="p">)</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">project_output</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">op</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
-                <span class="n">op</span> <span class="o">=</span> <span class="n">Projector</span><span class="p">(</span><span class="n">function</span><span class="p">,</span> <span class="n">tmp_proj_func</span><span class="p">)</span>
+                <span class="n">op</span> <span class="o">=</span> <span class="n">Projector</span><span class="p">(</span><span class="n">function</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">fs_visu</span><span class="p">)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">cast_operators</span><span class="p">[</span><span class="n">function</span><span class="p">]</span> <span class="o">=</span> <span class="n">op</span>
-            <span class="n">op</span><span class="o">.</span><span class="n">project</span><span class="p">()</span>
+            <span class="n">output</span> <span class="o">=</span> <span class="n">op</span><span class="o">.</span><span class="n">project</span><span class="p">()</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">op</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
-                <span class="n">op</span> <span class="o">=</span> <span class="n">Interpolator</span><span class="p">(</span><span class="n">function</span><span class="p">,</span> <span class="n">tmp_proj_func</span><span class="p">)</span>
+                <span class="n">op</span> <span class="o">=</span> <span class="n">Interpolator</span><span class="p">(</span><span class="n">function</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">fs_visu</span><span class="p">)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">cast_operators</span><span class="p">[</span><span class="n">function</span><span class="p">]</span> <span class="o">=</span> <span class="n">op</span>
-            <span class="n">op</span><span class="o">.</span><span class="n">interpolate</span><span class="p">()</span>
+            <span class="n">output</span> <span class="o">=</span> <span class="n">op</span><span class="o">.</span><span class="n">assemble</span><span class="p">()</span>
         <span class="c1"># ensure correct output function name</span>
-        <span class="n">old_name</span> <span class="o">=</span> <span class="n">tmp_proj_func</span><span class="o">.</span><span class="n">name</span><span class="p">()</span>
-        <span class="n">tmp_proj_func</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">func_name</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">outfile</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="n">tmp_proj_func</span><span class="p">,</span> <span class="n">time</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">next_export_ix</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">next_export_ix</span> <span class="o">+=</span> <span class="mi">1</span>
-        <span class="c1"># restore old name</span>
-        <span class="n">tmp_proj_func</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">old_name</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">fs_visu</span><span class="o">.</span><span class="n">restore_work_function</span><span class="p">(</span><span class="n">tmp_proj_func</span><span class="p">)</span></div>
+        <span class="n">output</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">func_name</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">outfile</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="n">output</span><span class="p">,</span> <span class="n">time</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">next_export_ix</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">next_export_ix</span> <span class="o">+=</span> <span class="mi">1</span></div>
 </div>
 
 
