--- a/_modules/thetis/limiter.html
+++ b/_modules/thetis/limiter.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.limiter &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
+    <title>thetis.limiter &#8212; Thetis 2025.10.1 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=ccd1159c"></script>
+    <script src="../../_static/documentation_options.js?v=1f79160d"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
@@ -81,7 +81,7 @@
 
     <span class="k">if</span> <span class="n">ufl_elem</span><span class="o">.</span><span class="n">family</span><span class="p">()</span> <span class="o">==</span> <span class="s1">&#39;TensorProductElement&#39;</span><span class="p">:</span>
         <span class="c1"># extruded mesh</span>
-        <span class="n">A</span><span class="p">,</span> <span class="n">B</span> <span class="o">=</span> <span class="n">ufl_elem</span><span class="o">.</span><span class="n">sub_elements</span>
+        <span class="n">A</span><span class="p">,</span> <span class="n">B</span> <span class="o">=</span> <span class="n">ufl_elem</span><span class="o">.</span><span class="n">factor_elements</span>
         <span class="k">assert</span> <span class="n">A</span><span class="o">.</span><span class="n">family</span><span class="p">()</span> <span class="ow">in</span> <span class="n">fam_list</span><span class="p">,</span> \
             <span class="s1">&#39;horizontal space must be one of </span><span class="si">{0:s}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">fam_list</span><span class="p">)</span>
         <span class="k">assert</span> <span class="n">B</span><span class="o">.</span><span class="n">family</span><span class="p">()</span> <span class="ow">in</span> <span class="n">fam_list</span><span class="p">,</span> \
