--- a/genindex.html
+++ b/genindex.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
+    <title>Index &#8212; Thetis 2025.10.1+1.gf513865b.dirty documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css?v=0f3339d6" />
-    <script src="_static/documentation_options.js?v=ccd1159c"></script>
+    <script src="_static/documentation_options.js?v=df6f0c20"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="#" />
@@ -1738,10 +1738,10 @@
         <li><a href="thetis.html#thetis.stability_functions.StabilityFunctionCheng.l8">(thetis.stability_functions.StabilityFunctionCheng attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.equation.Equation.label_term">label_term() (thetis.equation.Equation method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.lax_friedrichs_tracer_scaling_factor">lax_friedrichs_tracer_scaling_factor (thetis.options.CommonModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.lax_friedrichs_velocity_scaling_factor">lax_friedrichs_velocity_scaling_factor (thetis.options.CommonModelOptions attribute)</a>
@@ -1790,6 +1790,8 @@
         <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.load_state">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
       </ul></li>
+      <li><a href="thetis.html#thetis.turbine_loader.load_turbine">load_turbine() (in module thetis.turbine_loader)</a>
+</li>
       <li><a href="thetis.html#thetis.log.log">log() (in module thetis.log)</a>
 </li>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.log_output">log_output (thetis.options.CommonModelOptions attribute)</a>
@@ -1937,6 +1939,8 @@
         <li><a href="thetis.html#module-thetis.tracer_eq">thetis.tracer_eq</a>
 </li>
         <li><a href="thetis.html#module-thetis.tracer_eq_2d">thetis.tracer_eq_2d</a>
+</li>
+        <li><a href="thetis.html#module-thetis.turbine_loader">thetis.turbine_loader</a>
 </li>
         <li><a href="thetis.html#module-thetis.turbines">thetis.turbines</a>
 </li>
@@ -2944,8 +2948,6 @@
         <li><a href="thetis.html#module-thetis.timezone">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     thetis.tracer_eq
 
@@ -2953,11 +2955,20 @@
         <li><a href="thetis.html#module-thetis.tracer_eq">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     thetis.tracer_eq_2d
 
       <ul>
         <li><a href="thetis.html#module-thetis.tracer_eq_2d">module</a>
+</li>
+      </ul></li>
+      <li>
+    thetis.turbine_loader
+
+      <ul>
+        <li><a href="thetis.html#module-thetis.turbine_loader">module</a>
 </li>
       </ul></li>
       <li>
