--- a/_modules/thetis/inversion_tools.html
+++ b/_modules/thetis/inversion_tools.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.inversion_tools &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
+    <title>thetis.inversion_tools &#8212; Thetis 2025.10.1 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=ccd1159c"></script>
+    <script src="../../_static/documentation_options.js?v=1f79160d"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
@@ -63,6 +63,7 @@
 <span class="kn">import</span><span class="w"> </span><span class="nn">h5py</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">scipy.interpolate</span><span class="w"> </span><span class="kn">import</span> <span class="n">interp1d</span>
 <span class="kn">import</span><span class="w"> </span><span class="nn">time</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">time_mod</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">pyadjoint.optimization.optimization</span><span class="w"> </span><span class="kn">import</span> <span class="n">SciPyConvergenceError</span>
 <span class="kn">import</span><span class="w"> </span><span class="nn">os</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">mpi4py</span><span class="w"> </span><span class="kn">import</span> <span class="n">MPI</span>
 
@@ -422,12 +423,19 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">reset_counters</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">start_clock</span><span class="p">()</span>
         <span class="n">J</span> <span class="o">=</span> <span class="nb">float</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">reduced_functional</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">control_coeff_list</span><span class="p">))</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">set_initial_state</span><span class="p">(</span><span class="n">J</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">reduced_functional</span><span class="o">.</span><span class="n">derivative</span><span class="p">(),</span> <span class="bp">self</span><span class="o">.</span><span class="n">control_coeff_list</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">set_initial_state</span><span class="p">(</span><span class="n">J</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">reduced_functional</span><span class="o">.</span><span class="n">derivative</span><span class="p">(</span><span class="n">apply_riesz</span><span class="o">=</span><span class="kc">True</span><span class="p">),</span> <span class="bp">self</span><span class="o">.</span><span class="n">control_coeff_list</span><span class="p">)</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">no_exports</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">sta_manager</span><span class="o">.</span><span class="n">dump_time_series</span><span class="p">()</span>
-        <span class="k">return</span> <span class="n">minimize</span><span class="p">(</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">reduced_functional</span><span class="p">,</span> <span class="n">method</span><span class="o">=</span><span class="n">opt_method</span><span class="p">,</span> <span class="n">bounds</span><span class="o">=</span><span class="n">bounds</span><span class="p">,</span>
-            <span class="n">callback</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">get_optimization_callback</span><span class="p">(),</span> <span class="n">options</span><span class="o">=</span><span class="n">opt_options</span><span class="p">)</span></div>
+        <span class="k">try</span><span class="p">:</span>
+            <span class="k">return</span> <span class="n">minimize</span><span class="p">(</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">reduced_functional</span><span class="p">,</span> <span class="n">method</span><span class="o">=</span><span class="n">opt_method</span><span class="p">,</span> <span class="n">bounds</span><span class="o">=</span><span class="n">bounds</span><span class="p">,</span>
+                <span class="n">callback</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">get_optimization_callback</span><span class="p">(),</span> <span class="n">options</span><span class="o">=</span><span class="n">opt_options</span><span class="p">)</span>
+        <span class="k">except</span> <span class="n">SciPyConvergenceError</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
+            <span class="k">if</span> <span class="s2">&quot;TOTAL NO. OF ITERATIONS REACHED LIMIT&quot;</span> <span class="ow">in</span> <span class="nb">str</span><span class="p">(</span><span class="n">e</span><span class="p">):</span>
+                <span class="n">print_output</span><span class="p">(</span><span class="s2">&quot;Optimization stopped: reached iteration limit.&quot;</span><span class="p">)</span>
+                <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">control_coeff_list</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="k">raise</span></div>
 
 
 <div class="viewcode-block" id="InversionManager.consistency_test">
