--- a/_modules/thetis/optimisation.html
+++ b/_modules/thetis/optimisation.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.optimisation &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
+    <title>thetis.optimisation &#8212; Thetis 2025.10.1 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=ccd1159c"></script>
+    <script src="../../_static/documentation_options.js?v=1f79160d"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
@@ -434,7 +434,7 @@
         <span class="n">derivatives</span> <span class="o">=</span> <span class="n">args</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">array_dim</span> <span class="o">!=</span> <span class="nb">len</span><span class="p">(</span><span class="n">derivatives</span><span class="p">):</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Need array_dim argument in ConstantControlOptimisationCallback set to the number of controls&quot;</span><span class="p">)</span>
-        <span class="k">return</span> <span class="p">[[</span><span class="nb">float</span><span class="p">(</span><span class="n">d</span><span class="p">)</span> <span class="k">for</span> <span class="n">d</span> <span class="ow">in</span> <span class="n">derivatives</span><span class="p">]]</span></div>
+        <span class="k">return</span> <span class="p">[[</span><span class="nb">float</span><span class="p">(</span><span class="n">d</span><span class="o">.</span><span class="n">dat</span><span class="o">.</span><span class="n">data</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span> <span class="k">for</span> <span class="n">d</span> <span class="ow">in</span> <span class="n">derivatives</span><span class="p">]]</span></div>
 
 
 <div class="viewcode-block" id="DerivativeConstantControlOptimisationCallback.message_str">
