--- a/model_formulation_2d.html
+++ b/model_formulation_2d.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Depth averaged 2D model formulation &#8212; Thetis 2025.10.1+1.gf513865b.dirty documentation</title>
+    <title>Depth averaged 2D model formulation &#8212; Thetis 2025.10.1+1.gf513865b documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css?v=0f3339d6" />
-    <script src="_static/documentation_options.js?v=df6f0c20"></script>
+    <script src="_static/documentation_options.js?v=b0987aea"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script async="async" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
